--- a/public/index.html
+++ b/public/index.html
@@ -5,20 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Country Manager</title>
+    <link rel="stylesheet" href="layout.css">
 </head>
 
 <body>
-    <h1>Country Data Manager</h1>
-    <div>
-        <label for="filter">Filter: </label>
-        <select name="country-filter" id="filter" onchange="OnFilterSelected()">
-            <option value="All" selected>All</option>
-            <option value="Snowy">Snowy</option>
-            <option value="Rainy">Rainy</option>
-            <option value="Island">Island</option>
-        </select>
-    </div>
-    <div id="output"></div>
+    <header>Country Data Manager</header>
+    <div id="output" class="output"></div>
     <script src="app.js"></script>
 </body>
 
